--- a/index.html
+++ b/index.html
@@ -1,70 +1,187 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-    <meta charset="UTF-8"/>
-         <title>CompanyNAME</title>
-         <meta 
-         name = "description" 
-         content = "The Best company to make Test for the soil"/> 
-    </head>
+<html>
 
-    
-<div class="container">
-    <img src="Imgs/vtp.jpg" alt="" style="height:200px ;width:200px ;">
+<head>
+  <meta charset="UTF-8" />
+  <title>CompanyNAME</title>
+  <meta name="description" content="The Best company to make Test for the soil" />
+</head>
+
+<body>
+
+
+
+  <div class="container">
+    <img src="Imgs/vtp.jpg" alt="" style="height: 100px; ;width:100px ;">
     <h3>CompanyNAME</h3>
-</div>
-              <hr>
-<div class="navigation">
+  </div>
+  <hr>
+  <div class="navigation">
     <ul>
       <li>Link 1</li>
-       <li>Link 2</li>
-         <li>Link 3</li>
-        <li>Link 4</li>
+      <li>Link 2</li>
+      <li>Link 3</li>
+      <li>Link 4</li>
       <li>Link 5</li>
     </ul>
-</div>
-
-                <hr>
-<div class="Section1">
-      <img src="Imgs/vtp.jpg" alt="Test" height="200px" width="200px">
-         <div class="Description">
-        <p>Caption</p>
-      </div>
-</div>
-
-<hr>
-
-<div class="details">
-  <h1>Welcome to (CompanyNAME)</h1>
-    <h3>More Details</h3>
-</div>
-
-<div class="PicsDescription">
-  <h1>Our Projects</h1>
-  <div class="ONLYPICS">
-    <img src="Imgs/vtp.jpg" alt="Image Source Not Available" style="width:200px ; height:200px ;">
   </div>
-</div>
+
+  <hr>
+
+  <form method="post">
+    <div>
+      <input type="text" placeholder="UserName" name="username" required value="Adool" readonly disabled minlength="5"
+        maxlength="15">
+    </div>
+    <br>
+    <div>
+      <input type="email" required placeholder="Enter Your Email" name="Email">
+    </div>
+    <br>
+    <div>
+      <input type="password" required placeholder="PassWord" name="Password" minlength="10" maxlength="15">
+    </div>
+    <br>
+    <div>
+      <input type="color" name="Color">
+    </div>
+    <br>
+    <div>
+      <input type="range" name="Rangee" min="0" max="300" step="50" value="0">
+    </div>
+    <br>
+    <div>
+      <input type="number" name="number" min="0" max="500" step="10">
+    </div>
+    <br>
+
+    <!--
+    <div>
+      <input type="radio" id="Coding" name="Your Hobbies" value="Coding">
+      <label for="Coding">Coding</label>
+    </div>
+    <br>
+    <div>
+      <input type="radio" id="Football" name="Your Hobbies" value="FootBall">
+      <label for="Football">FootBall</label>
+    </div>
+    <br>
+    <div>
+      <input type="radio" id="Basket" name="Your Hobbies" value="BasketBall">
+      <label for="Basket">BasketBall</label>
+    </div>
+  -->
+    <div>
+      <input type="checkbox" id="Coding1" name="Your Hobbies" value="Coding">
+      <label for="Coding1">Coding</label>
+    </div>
+    <br>
+    <div>
+      <input type="checkbox" id="Football1" name="Your Hobbies" value="FootBall">
+      <label for="Football1">FootBall</label>
+    </div>
+    <br>
+    <div>
+      <input type="checkbox" id="Basket1" name="Your Hobbies" value="BasketBall">
+      <label for="Basket1">BasketBall</label>
+    </div>
+    <br>
+    <label for="Nationalty"></label>
+    <select name="Nationalty" id="Nationalty">
+      <optgroup label="Asia">
+        <option value="Jordan">Jordan</option>
+        <option value="Syria">Syria</option>
+        <option value="Palestine">Palestine</option>
+        <option value="UAE">United Arab Emirates</option>
+      </optgroup>
+      <optgroup label="Africa">
+        <option value="Egypt">Egypt</option>
+      </optgroup>
+      <br>
+    </select>
+    <br>
+    <textarea name="suggestions" cols="30" rows="10" placeholder="Your suggestions"></textarea>
+    <br>
+    <label>date</label>
+    <input type="date">
+  </form>
+
+  <button>For nothing btsweesh ishy just for Test</button>
+  <div>
+    <input type="submit" value="save">
+  </div>
+
+  <hr>
+  <div class="Section1">
+    <img src="Imgs/vtp.jpg" alt="Test" height="200px" width="200px">
+    <div class="Description">
+      <p>Caption</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div role="checkbox" aria-checked="true" tabindex="0" aria-labelledby="plan1">plan1</div>
+  <label id="plan1"> plan one Labellll</label>
 
 
-<div class="NavBarFooter">
+
+
+
+  <div class="details">
+    <h1>Welcome to (CompanyNAME)</h1>
+    <h3>More Details</h3>
+  </div>
+
+  <div class="PicsDescription">
+    <h1>Our Projects</h1>
+    <div class="Video">
+      <video controls loop muted poster="Imgs/vtp.jpg" style="height: 200px; width: 300px;">
+        <source src="videos/videoplayback.mp4" type="video/mp4">
+        <source src="videos/videoplayback.ogg" type="video/ogg">
+      </video>
+    </div>
+  </div>
+
+  <blockquote>العلم فالصغر كالنقش على الحجر</blockquote>
+
+
+  <hr>
+
+  <pre>
+    <code>
+   local function Adel(player,choice)
+   local user_id = vRP.getuserid
+   test
+  </code>
+</pre>
+
+  <hr>
+
+  <iframe src="https://m3lm.academy/" height="800" width="800"></iframe>
+
+  <hr>
+
+  <div class="NavBarFooter">
     <ul>
-       <li>Link 1</li>
-         <li>Link 2</li>
-           <li>Link 3</li>
-         <li>Link 4</li>
-       <li>Link 5</li>
+      <li>Link 1</li>
+      <li>Link 2</li>
+      <li>Link 3</li>
+      <li>Link 4</li>
+      <li>Link 5</li>
     </ul>
-                         <hr>
+    <hr>
     <div class="Footer">
       <ul>
         <li>Our Number : +9715XXXXXXXXX</li>
-          <li>Our Email : vadel12121@gmail.com</li>
+        <li>Our Email : vadel12121@gmail.com</li>
         <li>Our Team : Adel , Adel 2 , Adel 3 , Adel 4 , Adel 5</li>
       </ul>
-   </div>
-</div>
+    </div>
+  </div>
 
+
+</body>
 
 
 
